# Onyxlytics

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  gulpfile.js  mock.json  package-lock.json  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
app/: globals.css  layout.tsx  page.tsx
app/api/solana/analyze/: route.ts
app/api/solana/metrics/: route.ts
app/api/solana/query/: route.ts
app/contract-eda/: page.tsx
app/documentation/: page.tsx
app/network-health/: page.tsx
app/query-editor/: page.tsx
app/saved-queries/: page.tsx
app/settings/: page.tsx
app/shared-query/[id]/: page.tsx
app/visualizations/: page.tsx
components/dashboard/chart/: index.tsx
components/dashboard/eda/: index.tsx
components/dashboard/query-editor/: index.tsx
components/dashboard/rebels-ranking/: index.tsx
components/dashboard/saved-query-widget/: index.tsx
components/dashboard/security-status/: index.tsx
components/dashboard/sidebar/: index.tsx
components/dashboard/stat/: index.tsx
components/dashboard/widget/: index.tsx
contracts/query-stats/: Anchor.toml  Cargo.toml
contracts/query-stats/programs/query-stats/src/: lib.rs
hooks/: use-solana-metrics.ts
lib/: example-queries.ts  format-utils.ts  queries.ts  solana-eda.ts  solana-rpc.ts
types/: dashboard.ts
