[package]
name = "query-stats"
version = "0.1.0"
description = "Analytics tracking for query executions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "query_stats"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"